--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <header class="nav">
   <div class="container" style="display:flex;align-items:center;justify-content:space-between;gap:14px">
     <a class="brand" href="index.html">
-      <div class="badge" aria-hidden="true">🤠</div>
+      <div class="badge" aria-hidden="true">
+  <img src="assets/logo.png" alt="Hope Valley RP Logo" style="width:100%;height:100%;object-fit:contain;border-radius:12px;">
+</div>
+
       <div>
         <h1 id="serverName">Hope Valley RP</h1>
         <p id="tagline">A gritty 1897 frontier RP experience.</p>
