--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <div class="container" style="display:flex;align-items:center;justify-content:space-between;gap:14px">
     <a class="brand" href="index.html">
       <div class="badge" aria-hidden="true">
-  <img src="assets/logo.png" alt="Hope Valley RP Logo" style="width:100%;height:100%;object-fit:contain;border-radius:12px;">
+<img src="assets/logo.png" alt="Hope Valley RP" style="width:100%;height:100%;object-fit:contain;border-radius:12px;">
+>
 </div>
 
       <div>
